modified some html files and also the models.py

--- a/betasite/adminSite/templates/adminSite/donation.html
+++ b/betasite/adminSite/templates/adminSite/donation.html
@@ -81,7 +81,7 @@
 					<input type="text" name="payment" placeholder="Amount of Payment">
 				</div>
 				<div class="field">
-					<label>Amount Payed</label>
+					<label>Payment Date</label>
 				</div>
 				<div class="field">
 					<input type="text" name="date" placeholder="YYYY-MM-DD">
