--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -21,7 +21,7 @@
 				  <thead>
 				    <tr>
 				      <th>Donation ID</th>
-				      <th class="">Donor ID</th>
+				      <th>Donor ID</th>
 				      <th>Pledge Amount</th>
 				      <th>Amount Payed</th>
 				      <th>Balance</th>
