--- a/betasite/adminSite/templates/adminSite/donorList.html
+++ b/betasite/adminSite/templates/adminSite/donorList.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="twelve wide column">
-					<table class="ui single line table">
+					<table class="ui sortable single line table">
 					  <thead>
 					    <tr>
 					      <th>Donor ID</th>
@@ -66,5 +66,6 @@
 		$('#addDonor').click(function() {
 			location.href = "{% url 'adminSite:addDonor' %}";
 		});
+		$('.sortable.table').tablesort();
 	</script>
 {% endblock %}
