--- a/betasite/adminSite/templates/adminSite/eventList.html
+++ b/betasite/adminSite/templates/adminSite/eventList.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="column"></div>
 			<div class="twelve wide column">
-				<table class="ui single line table">
+				<table class="ui sortable single line table">
 				  <thead>
 				    <tr>
 				      <th>Event ID</th>
@@ -66,5 +66,6 @@
 		$('#addEvent').click(function() {
 			location.href = "{% url 'adminSite:addEvent' %}";
 		});
+		$('.sortable.table').tablesort();
 	</script>
 {% endblock %}
