--- a/betasite/adminSite/templates/adminSite/event.html
+++ b/betasite/adminSite/templates/adminSite/event.html
@@ -34,7 +34,7 @@
 					  <tbody>
 					  {% for eventdonation in eventDonations %}
 					    <tr>
-					      <td><a href="#">{{ eventdonation.donorid.donorid }}</a></td>
+					      <td><a href="{% url 'adminSite:donor' eventdonation.donorid.donorid %}">{{ eventdonation.donorid.donorid }}</a></td>
 					      <td>{{ eventdonation.donorid.lname }}, {{ eventdonation.donorid.fname }} {{ eventdonation.donorid.mname }}</td>
 					    </tr>
 					  {% endfor %}
@@ -42,9 +42,6 @@
 					   <tfoot>
 					    <tr>
 					    	<th colspan="10">
-					    		<div class="ui left floated small primary labeled icon button" id="addParticipant">
-						        	<i class="user icon"></i>Add Participant
-						        </div>
 						      	<div class="ui right floated pagination menu">
 						        	<a class="icon item">
 						          		<i class="left chevron icon"></i>
@@ -62,51 +59,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="ui modal">
-		<div class="header">
-			Add Participant
-		</div>
-		<div class="content">
-			<form class="ui form" id="newParticipant" action="#" method="POST">
-				<div class="field">
-					<label>Participant Name</label>
-					<div class="ui fluid search selection dropdown">
-						<input type="hidden" name="donor">
-						<i class="dropdown icon"></i>
-						<div class="default text">Select Donor</div>
-						<div class="menu">
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-							<div class="item" data-value="10100210">Quezon, Ice</div>
-						</div>
-					</div>
-				</div>
-			</form>
-		</div>
-		<div class="actions">
-		    <div class="two fluid ui buttons">
-		      	<div class="ui ok green button" type="submit" form="newParticipant">
-		        	<i class="user icon"></i>
-		        	Add Participant
-		    	</div>
-		    	<div class="ui ok red button">
-		        	<i class="remove icon"></i>
-		    		Cancel
-		    	</div>
-			</div>
-		</div>
-	</div>
 {% endblock %}
 
 {% block scripts %}
 	<script type="text/javascript">
 		$('.ui.dropdown').dropdown();
-		$('#addParticipant').click(function(){
-			$('.ui.modal').modal('show')
-		});
 		$('.sortable.table').tablesort();
 	</script>
 {% endblock %}
