--- a/betasite/adminSite/templates/adminSite/donor.html
+++ b/betasite/adminSite/templates/adminSite/donor.html
@@ -1,7 +1,7 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
 {% load sum %}
-{% block title %}Beta University Admin: {{ donor.fname }} {{ donor.lname }} {% endblock %}
+{% block title %}Beta University Admin: {{ donor.lname }}, {{ donor.fname }} {% endblock %}
 
 {% block style %}{% endblock %}
 
