--- a/betasite/adminSite/templates/adminSite/event.html
+++ b/betasite/adminSite/templates/adminSite/event.html
@@ -1,6 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
-{% block title %}Beta University Admin: Home{% endblock %}
+{% block title %}Beta University Admin: {{ event.event_name }} {% endblock %}
 
 {% block style %}{% endblock %}
 
