--- a/betasite/adminSite/templates/adminSite/classList.html
+++ b/betasite/adminSite/templates/adminSite/classList.html
@@ -1,6 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
-{% block title %}Beta University Admin: Home{% endblock %}
+{% block title %}Beta University Admin: Class List{% endblock %}
 
 {% block style %}{% endblock %}
 
