--- a/betasite/adminSite/templates/adminSite/donorList.html
+++ b/betasite/adminSite/templates/adminSite/donorList.html
@@ -1,6 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
-{% block title %}Beta University Admin: Donors{% endblock %}
+{% block title %}Beta University Admin: Donor List{% endblock %}
 
 {% block style %}{% endblock %}
 
