--- a/betasite/adminSite/templates/adminSite/editDonor.html
+++ b/betasite/adminSite/templates/adminSite/editDonor.html
@@ -1,6 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
-{% block title %}Beta University Admin: Add Donor{% endblock %}
+{% block title %}Beta University Admin: Edit Donor{% endblock %}
 
 {% block style %}{% endblock %}
 
