Modified Forms for Error Checking and Fixed Delete Donor Bug

--- a/betasite/adminSite/templates/adminSite/addDonation.html
+++ b/betasite/adminSite/templates/adminSite/addDonation.html
@@ -23,7 +23,7 @@
 							There was some errors with your submittion
 						</div>
 						<ul class="list">
-							<li>Please fill out the required fields</li>
+							<li>Please fill out the *required fields</li>
 						</ul>
 					</div>
 					<form class="ui form" method="post" action="{% url 'adminSite:newDonation' %}" id="addDonationForm">
