--- a/betasite/adminSite/templates/adminSite/addDonor.html
+++ b/betasite/adminSite/templates/adminSite/addDonor.html
@@ -16,6 +16,15 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="twelve wide column">
+					<div class="ui error message transition hidden">
+						<i class="close icon"></i>
+						<div class="header">
+							There was some errors with your submittion
+						</div>
+						<ul class="list">
+							<li>Please fill out the *required fields</li>
+						</ul>
+					</div>
 					<form class="ui form" action="{% url 'adminSite:newDonor' %}" method="post" id="donorForm">
 						{% csrf_token %}
 						<h4 class="ui dividing header">Personal Info</h4>
@@ -24,13 +33,13 @@
 						</div>
 						<div class="three fields">
 							<div class="field">
-								<input type="text" placeholder="First Name" name="fname">
+								<input type="text" placeholder="First Name*" name="fname" class="required">
 							</div>
 							<div class="field">
 								<input type="text" placeholder="Middle Name" name="mname">
 							</div>
 							<div class="field">
-								<input type="text" placeholder="Last Name" name="lname">
+								<input type="text" placeholder="Last Name*" name="lname" class="required">
 							</div>
 						</div>
 						<div class="field">
@@ -40,11 +49,11 @@
 							<input type="text" placeholder="Address" name="address">
 						</div>
 						<div class="field">
-							<label>Class Year</label>
+							<label>Class Year*</label>
 						</div>
 						<div class="field">
 							<div class="ui fluid search selection dropdown">
-								<input type="hidden" name="class_field">
+								<input type="hidden" name="class_field" class="required">
 								<i class="dropdown icon"></i>
 								<div class="default text">Select Class Year</div>
 								<div class="menu">
@@ -55,11 +64,11 @@
 							</div>
 						</div>
 						<div class="field">
-							<label>Donor Affiliation</label>
+							<label>Donor Affiliation*</label>
 						</div>
 						<div class="field">
 							<div class="ui fluid search selection dropdown">
-								<input type="hidden" name="donor">
+								<input type="hidden" name="donor" class="required">
 								<i class="dropdown icon"></i>
 								<div class="default text">Select Donor Affiliation</div>
 								<div class="menu">
@@ -98,8 +107,22 @@
 {% block scripts %}
 	<script type="text/javascript">
 		$('.ui.dropdown').dropdown();
+		$('.close').click(function() {
+			$(this).closest('.message').transition('fade');
+		});
 		$('#addButton').click(function() {
-			$('#donorForm').submit();
+			var valid = true;
+			$('.required').each(function() {
+				if($(this).val()==''){
+					valid = false;
+				}
+			});
+			if(!valid){
+				$('.ui.error.message').transition('fade down');
+			}
+			else {
+				$('#donorForm').submit();
+			}
 		});
 	</script>
 {% endblock %}
