Added Error Checking in Add Event and Fixed Bug in Delete Event

--- a/betasite/adminSite/templates/adminSite/addDonor.html
+++ b/betasite/adminSite/templates/adminSite/addDonor.html
@@ -91,7 +91,7 @@
 						</div>
 						<h4 class="ui dividing header">Payment Info</h4>
 						<div class="field">
-							<label>Credit Card Number</label>
+							<label>Credit Card Number*</label>
 						</div>
 						<div class="field">
 							<input type="text" placeholder="Credit Card Number" name="creditno">
