--- a/betasite/adminSite/templates/adminSite/class.html
+++ b/betasite/adminSite/templates/adminSite/class.html
@@ -10,7 +10,7 @@
 			<div class="row">
 				<div class="three wide column"></div>
 				<div class="twelve wide column">
-					<h1>Class</h1>
+					<h1>Class {{ class.classyear }}</h1>
 					<h4>Class Coordinator: {{ class.coordinator }}</h4>
 				</div>
 			</div>
