--- a/betasite/adminSite/templates/adminSite/editDonor.html
+++ b/betasite/adminSite/templates/adminSite/editDonor.html
@@ -16,8 +16,9 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="twelve wide column">
-					<form class="ui form" action="{% url 'adminSite:newDonor' %}" method="post" id="donorForm">
+					<form class="ui form" action="{% url 'adminSite:modifyDonor' %}" method="post" id="donorForm">
 						{% csrf_token %}
+						<input type="hidden" value="{{ donor.donorid }}" name="donorid">
 						<h4 class="ui dividing header">Personal Info</h4>
 						<div class="field">
 							<label>Name</label>
