--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -27,6 +27,7 @@
 				<a href="{% url 'adminSite:annualReport' %}" class="item">Annual Report</a>
 				<a href="{% url 'adminSite:monthlyReport' %}" class="item">Monthly Report</a>
 				<a href="" class="item">Due Payments</a>
+				<a href="{% url 'adminSite:eventReportGenerator' %}" class="item">Event Report</a>
 				<a href="" class="item">Coordinator's Class List</a>
 				<a href="" class="item">Potential Donors</a>
 			</div>
