--- a/betasite/adminSite/templates/adminSite/eventReport.html
+++ b/betasite/adminSite/templates/adminSite/eventReport.html
@@ -16,18 +16,27 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="twelve wide column">
-					<table class="ui single line table">
+					<table class="ui sortable single line table">
 					  <thead>
 					    <tr>
-					    	<th></th>
+					    	<th>Donor</th>
+					    	<th>Pledges</th>
+					    	<th>Gifts</th>
 					    </tr>
 					  </thead>
 					  <tbody>
-						  <td></td>				  	
+						  <td></td>  	
 					  </tbody>
 					   <tfoot></tfoot>
 					</table>
 				</div>
 			</div>
 		</div>
+{% endblock %}
+
+
+{% block scripts %}
+	<script type="text/javascript">
+		$('.sortable.table').tablesort();
+	</script>
 {% endblock %}
