Modified monthly and annual report

--- a/betasite/adminSite/templates/adminSite/monthlyReport.html
+++ b/betasite/adminSite/templates/adminSite/monthlyReport.html
@@ -19,7 +19,8 @@
 					<table class="ui single line table">
 					  <thead>
 					    <tr>
-					    	<th></th>
+					    	<th>Pledges</th>
+					    	<th>Gifts</th>
 					    </tr>
 					  </thead>
 					  <tbody>
