--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -24,7 +24,7 @@
 		<div class="item">
 			<div class="header">Reports</div>
 			<div class="menu">
-				<a href="{% url 'adminSite:annualReport' %}" class="item">Annual Report</a>
+				<a href="{% url 'adminSite:annualReportGenerator' %}" class="item">Annual Report</a>
 				<a href="{% url 'adminSite:monthlyReportGenerator' %}" class="item">Monthly Report</a>
 				<a href="" class="item">Due Payments</a>
 				<a href="{% url 'adminSite:eventReportGenerator' %}" class="item">Event Report</a>
