Added Total in Event Report

--- a/betasite/adminSite/templates/adminSite/eventReport.html
+++ b/betasite/adminSite/templates/adminSite/eventReport.html
@@ -34,7 +34,13 @@
 					  	</tr>
 						{% endfor %}
 					  </tbody>
-					   <tfoot></tfoot>
+					   <tfoot class="full-width green">
+					   	<tr>
+					   		<th>Total</th>
+					   		<th>{{ eventDonations|totalpledges }} PHP</th>
+					   		<th>{{ eventDonations|totalgifts }} PHP</th>
+					   	</tr>
+					   </tfoot>
 					</table>
 				</div>
 			</div>
