Modified generate report html files

--- a/betasite/adminSite/templates/adminSite/annualReportGenerator.html
+++ b/betasite/adminSite/templates/adminSite/annualReportGenerator.html
@@ -19,7 +19,7 @@
 					<form class="ui form">
 						<div class="fluid field">
 							<label class="ui center aligned header">Input Year</label>
-							<input type="text" placeholder="Year">
+							<input type="text" placeholder="Year" minlength="4" maxlength="4" placeholder="Year">
 
 						</div>
 						<div class="field">
