--- a/betasite/adminSite/templates/adminSite/classList.html
+++ b/betasite/adminSite/templates/adminSite/classList.html
@@ -67,8 +67,8 @@
 				<div class="field">
 					<label>Class Year</label>
 				</div>
-				<div>
-					<input type="text" name="classyear">
+				<div class="fluid field">
+					<input type="text" name="classyear" minlength="4" maxlength="4">
 				</div>
 			</form>
 		</div>
