--- a/betasite/adminSite/templates/adminSite/monthlyReportGenerator.html
+++ b/betasite/adminSite/templates/adminSite/monthlyReportGenerator.html
@@ -17,16 +17,35 @@
 				<br>
 				<div class="ui centered grid">
 					<form class="ui form">
-						<div class="fluid field">
-							<label class="ui center aligned header">Input Year</label>
-							<input type="text" placeholder="Year">
-						</div>
-						<div class="fluid field">
-							<label class="ui center aligned header">Input Month</label>
-							<input type="text" placeholder="Month">
-						</div>
+						 <label class="ui center aligned header">Input Month and Year</label>
+					      <div class="two fields">
+					        <div class="field">
+					          <select class="ui fluid search dropdown" name="month">
+					            <option value="">Month</option>
+					            <option value="1">January</option>
+					            <option value="2">February</option>
+					            <option value="3">March</option>	
+					            <option value="4">April</option>
+					            <option value="5">May</option>
+					            <option value="6">June</option>
+					            <option value="7">July</option>
+					            <option value="8">August</option>
+					            <option value="9">September</option>
+					            <option value="10">October</option>
+					            <option value="11">November</option>
+					            <option value="12">December</option>
+					          </select>
+					        </div>
+					        <div class="fluid field">
+					          <input type="text" name="Year" minlength="4" maxlength="4" placeholder="Year">
+					        </div>
+					      </div>
+					    
+
+
+						
 						<br>
-						<div class="field">
+						<div class="field" id="generate">
 							<button class="massive ui green button">Generate</button>
 						</div>
 					</form>
@@ -36,4 +55,5 @@
 	</div>
 {% endblock %}
 
-{% block scripts %}{% endblock %}
+{% block scripts %}
+{% endblock %}
