Added beta_crap dump and modified changes like address, etc.

--- a/betasite/adminSite/templates/adminSite/donor.html
+++ b/betasite/adminSite/templates/adminSite/donor.html
@@ -23,7 +23,7 @@
 									{% endif %}">{{ donor.class_field }}
 						</a></h5>
 						</div>
-						<div class="item"><h5>Address: Cebu City</h5></div>
+						<div class="item"><h5>Address: {{ donor.address }}</h5></div>
 						<div class="item"><h5>Contact Number: {{ donor.contactno }}</h5></div>
 						<div class="item"><h5>Email: {{ donor.email }}</h5></div>
 						<div class="item"><h5>Credit Card No. : {{ donor.creditno }}</h5></div>
