added login required in def views and implemented user stuff thing. also added a search bar which is not working atm

--- a/betasite/adminSite/templates/adminSite/addDonor.html
+++ b/betasite/adminSite/templates/adminSite/addDonor.html
@@ -64,7 +64,7 @@
 							</div>
 						</div>
 						<div class="field">
-							<label>Donor Affiliation*</label>
+							<label>Donor Affiliation</label>
 						</div>
 						<div class="field">
 							<div class="ui fluid search selection dropdown">
