--- a/betasite/adminSite/templates/adminSite/class.html
+++ b/betasite/adminSite/templates/adminSite/class.html
@@ -44,9 +44,11 @@
 					   <tfoot>
 					    <tr>
 					    	<th colspan="10">
+					    		{% if not is_not_authorized %}
 					    		<div class="ui left floated small primary labeled icon button" id="changeCoor">
 						        	<i class="user icon"></i>Change Coordinator
 						        </div>
+						        {% endif %}
 						      	<div class="ui right floated pagination menu">
 						        	<a class="icon item">
 						          		<i class="left chevron icon"></i>
