--- a/betasite/adminSite/templates/adminSite/donation.html
+++ b/betasite/adminSite/templates/adminSite/donation.html
@@ -63,9 +63,11 @@
 					   <tfoot>
 					    <tr>
 					    	<th colspan="10">
+					    		{% if not is_not_authorized %}
 					    		<div class="ui left floated small primary labeled icon button" id="makePayment">
 						        	<i class="dollar icon"></i>Add Payment
 						        </div>
+						        {% endif %}
 						      	<div class="ui right floated pagination menu">
 						        	<a class="icon item">
 						          		<i class="left chevron icon"></i>
