--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -49,9 +49,11 @@
 				   <tfoot>
 				    <tr>
 				    	<th colspan="10">
+				    		{% if not is_not_authorized %}
 				    		<div class="ui left floated small primary labeled icon button" id="addDonation">
 					        	<i class="dollar icon"></i> Add Donation
 					        </div>
+					        {% endif %}
 					      	<div class="ui right floated pagination menu">
 					        	<a class="icon item">
 					          		<i class="left chevron icon"></i>
