--- a/betasite/adminSite/templates/adminSite/eventList.html
+++ b/betasite/adminSite/templates/adminSite/eventList.html
@@ -40,9 +40,11 @@
 				   <tfoot>
 				    <tr>
 				    	<th colspan="10">
+				    		{% if not is_not_authorized %}
 				    		<div class="ui left floated small primary labeled icon button" id="addEvent">
 					        	<i class="calendar icon"></i> Add New Event
 					        </div>
+					        {% endif %}
 					      	<div class="ui right floated pagination menu">
 					        	<a class="icon item">
 					          		<i class="left chevron icon"></i>
