--- a/betasite/adminSite/templates/adminSite/userList.html
+++ b/betasite/adminSite/templates/adminSite/userList.html
@@ -1,6 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
-{% block title %}Beta University Admin: Donor List{% endblock %}
+{% block title %}Beta University Admin: User List{% endblock %}
 
 {% block style %}{% endblock %}
 
@@ -10,14 +10,7 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="column">
-					<h2>Donors</h2>
-				</div>
-				<div class="ui fluid category search">
-  					<div class="ui icon input">
-    					<input class="prompt" type="text" placeholder="Search donor...">
-    					<i class="search icon"></i>
-  					</div>
-  					<div class="results"></div>
+					<h2>Users</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -26,30 +19,30 @@
 					<table class="ui sortable single line table">
 					  <thead>
 					    <tr>
-					      <th>Donor ID</th>
-					      <th>Donor Name</th>
-					      <th>Date Last Payed</th>
+					      <th>User name</th>
+					      <th>Group</th>
 					      <th>Delete</th>
 					    </tr>
 					  </thead>
 					  <tbody>
-					  	{% for donor in object_list %}
-						    <tr>
-						      <td><a href="{% url 'adminSite:donor' donor.donorid %}">{{ donor.donorid }}</a></td>
-						      <td>{{ donor.lname }}, {{ donor.fname }} {{ donor.mname }}</td>
-						      <td>{{ donor.transactions.last.date_paid }}</td>
-						      <td>
-								<a href="{% url 'adminSite:deleteDonor' donor.donorid %}"><i class="trash icon"></i></a>
-						      </td>
-						    </tr>
-					    {% endfor %}
+					  	{% for user in object_list %}
+					  	<tr>
+					  		<td>{{ user.username }}</td>
+					  		<td>
+					  		{% for group in user.groups.all %}
+					  		{{ group.name }}
+					  		{% endfor %}
+					  		</td>
+					  		<td><a href="{% url 'adminSite:deleteUser' user.pk %}"><i class="trash icon"></i></a></td>
+					  	</tr>
+					  	{% endfor %}
 					  </tbody>
 					   <tfoot>
 					    <tr>
 					    	<th colspan="10">
 					    		{% if not is_not_authorized %}
-					    		<div class="ui left floated small primary labeled icon button" id="addDonor">
-						        	<i class="user icon"></i> Add New Donor
+					    		<div class="ui left floated small primary labeled icon button" id="addUser">
+						        	<i class="user icon"></i> Add New User
 						        </div>
 						        {% endif %}
 						      	<div class="ui right floated pagination menu">
@@ -72,13 +65,9 @@
 
 {% block scripts %}
 	<script type="text/javascript">
-		$('#addDonor').click(function() {
-			location.href = "{% url 'adminSite:addDonor' %}";
+		$('#addUser').click(function() {
+			location.href = "{% url 'adminSite:addUser' %}"
 		});
 		$('.sortable.table').tablesort();
-		$('.ui.search')
-  			.search({
-    		source: content
-  		});
 	</script>
 {% endblock %}
