--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -26,7 +26,9 @@
 				      <th>Amount Payed</th>
 				      <th>Balance</th>
 				      <th>Date Last Payed</th>
+				      {% if not is_not_authorized %}
 				      <th>Delete</th>
+				      {% endif %}
 				    </tr>
 				  </thead>
 				  <tbody>
@@ -40,9 +42,11 @@
 					    <td>{{ donation.amount|sub:payed }} PHP</td>
 					    <td>{{ donation.transactions.all.last.date_paid }}</td>
 					    {% endwith %}
+					    {% if not is_not_authorized %}
 					    <td>
 								<a href="{% url 'adminSite:deleteDonation' donation.donationno %}"><i class="trash icon"></i></a>
 						</td>
+						{% endif %}
 					</tr>
 				    {% endfor %}
 				  </tbody>
