--- a/betasite/adminSite/templates/adminSite/userList.html
+++ b/betasite/adminSite/templates/adminSite/userList.html
@@ -20,6 +20,8 @@
 					  <thead>
 					    <tr>
 					      <th>User name</th>
+					      <th>Name</th>
+					      <th>Email</th>
 					      <th>Group</th>
 					      <th>Delete</th>
 					    </tr>
@@ -27,7 +29,9 @@
 					  <tbody>
 					  	{% for user in object_list %}
 					  	<tr>
-					  		<td>{{ user.username }}</td>
+					  		<td><a href= "{% url 'adminSite:users' user.pk %}"> {{ user.username }} </a></td>
+					  		<td>{{ user.first_name }} {{ user.last_name }}</td>
+					  		<td>{{ user.email }}</td>
 					  		<td>
 					  		{% for group in user.groups.all %}
 					  		{{ group.name }}
