Modified name fields in addUser.html

--- a/betasite/adminSite/templates/adminSite/addUser.html
+++ b/betasite/adminSite/templates/adminSite/addUser.html
@@ -31,15 +31,17 @@
 							<label>Username*</label>
 							<input type="text" placeholder="Username*" name="username" class="required">
 						</div>
-
-						<div class="three wide field">
-							<label>Last Name</label>
-							<input type="text" placeholder="Last Name" name="last_name">
+						<div class="field">
+							<label>Name</label>
 						</div>
+						<div class="two fields">
+							<div class="three wide field">
+								<input type="text" placeholder="Last Name" name="last_name">
+							</div>
 
-						<div class="three wide field">
-							<label>First Name</label>
-							<input type="text" placeholder="First Name" name="first_name">
+							<div class="three wide field">
+								<input type="text" placeholder="First Name" name="first_name">
+							</div>
 						</div>
 
 						<div class="three wide field">
