--- a/betasite/adminSite/templates/adminSite/eventReport.html
+++ b/betasite/adminSite/templates/adminSite/eventReport.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="column"></div>
 				<div class="column">
-					<h2>Event Report</h2>
+					<h2>Event Report: {{ event.event_name }}</h2>
 				</div>
 			</div>
 			<div class="row">
