--- a/betasite/adminSite/templates/adminSite/user.html
+++ b/betasite/adminSite/templates/adminSite/user.html
@@ -25,7 +25,7 @@
 							<li>Please fill out the *required fields</li>
 						</ul>
 					</div>
-					<form class="ui form" action="{% url 'adminSite:newUser' %}" method="post" id="userForm">
+					<form class="ui form" action="{% url 'adminSite:editUser' %}" method="post" id="userForm">
 						{% csrf_token %}
 <!-- 						<div class="three wide field">
 							<label>Username*</label>
@@ -44,19 +44,20 @@
 						      Passwords doesn't match
 						    </div>
 						</div> -->
+						<input type="hidden" value="{{ user.pk }}" name = "pk">
 						<div class="three wide field">
 							<label>Last Name</label>
-							<input type="text" placeholder="Last Name" name="last_name" id="last_name" value={{ user.last_name }}>
+							<input type="text" placeholder="Last Name" name="last_name" id="last_name" value="{{ user.last_name }}">
 						</div>
 
 						<div class="three wide field">
 							<label>First Name</label>
-							<input type="text" placeholder="First Name" name="first_name" id="first_name" value={{ user.first_name }}>
+							<input type="text" placeholder="First Name" name="first_name" id="first_name" value="{{ user.first_name }}">
 						</div>
 
 						<div class="three wide field">
 							<label>Email</label>
-							<input type="text" placeholder="example123@yahoo.com" name="email" id="email" value={{ user.email }}>
+							<input type="text" placeholder="example123@yahoo.com" name="email" id="email" value="{{ user.email }}">
 						</div>
 						
 						<div class="three wide field">
